--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
              window.location="game.html";
-        }
-        if (password == confirmPasswordB){
-            window.location="game.html";
+        } else if (password == confirmPasswordB){
+            window.location="gameB.html";
         }
         else{
             alert("Passwords do not match.");
