--- a/gameB.html
+++ b/gameB.html
@@ -24,11 +24,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/New folder.loader.js";
+      var loaderUrl = buildUrl + "/KL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/New folder.data.gz",
-        frameworkUrl: buildUrl + "/New folder.framework.js.gz",
-        codeUrl: buildUrl + "/New folder.wasm.gz",
+        dataUrl: buildUrl + "/KL.data.gz",
+        frameworkUrl: buildUrl + "/KL.framework.js.gz",
+        codeUrl: buildUrl + "/KL.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "KiriAndLou",
